apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

android {
    compileOptions {
        targetCompatibility = "8"
        sourceCompatibility = "8"
    }
    compileSdkVersion 28
    defaultConfig {
        applicationId "com.example.bikeaid"
        minSdkVersion 19
        targetSdkVersion 28
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:appcompat-v7:28.0.0'
    implementation 'com.android.support:design:28.0.0'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation 'com.google.android.gms:play-services-maps:16.1.0'
    implementation 'com.google.firebase:firebase-auth:17.0.0'
    implementation 'com.google.firebase:firebase-database:17.0.0'
    implementation 'com.google.firebase:firebase-storage:17.0.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    //imageLoader
    implementation 'com.squareup.picasso:picasso:2.71828'
    //GSON
    implementation 'com.google.code.gson:gson:2.8.5'
    //RECYEKR
    implementation "com.android.support:recyclerview-v7:28.0.0"
    //Google Map Service
//    implementation 'org.osmdroid:osmdroid-android:6.1.0'
    //google location service
//    implementation 'com.google.android.gms:play-services-location:16.0.0'
    //map
    implementation 'com.google.maps:google-maps-services:0.9.3'
    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
}
apply plugin: 'com.google.gms.google-services'
